src/test/resources/examples/valid_cases/NamedStudent.queen
public final implementation NamedStudent extends AbstractStudent {

    private String name;
    private String[] grades;

    public NamedStudent(String name) {
        this.name = name;
    }

    public String name() {
        return this.name;
    }
}