src/test/resources/examples/invalid_cases/CStyleVariables.queen
public final implementation CStyleVariables of Variables {

   private int a[];

   public CStyleVariables(int a[]) {
       this.a = a;
   }

   public void someMethod(int a[]) {
      int[] other[] = new int[5][5];
   }

}